infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-web
  labels:
    app.kubernetes.io/name: socket-web
    app.kubernetes.io/part-of: iot-p3
spec:
  rules:
    - host: chat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: socket-web
                port:
                  name: http
